version/0.11/_sources/_autosummary/ansys.api.pyensight.ens_part_vof.ENS_PART_VOF.rst.txt
ENS\_PART\_VOF
==============

.. currentmodule:: ansys.api.pyensight.ens_part_vof

.. autoclass:: ENS_PART_VOF

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      ENS_PART_VOF.addchild
      
      
      ENS_PART_VOF.attrgroupinfo
      
      
      ENS_PART_VOF.attrinfo
      
      
      ENS_PART_VOF.attrissensitive
      
      
      ENS_PART_VOF.attrtree
      
      
      ENS_PART_VOF.cmdlang_rec_info
      
      
      ENS_PART_VOF.createpart
      
      
      ENS_PART_VOF.destroy
      
      
      ENS_PART_VOF.get_values
      
      
      ENS_PART_VOF.getattr
      
      
      ENS_PART_VOF.getattrs
      
      
      ENS_PART_VOF.getmetatag
      
      
      ENS_PART_VOF.hasmetatag
      
      
      ENS_PART_VOF.highlight_part
      
      
      ENS_PART_VOF.realtimemode
      
      
      ENS_PART_VOF.removechild
      
      
      ENS_PART_VOF.setattr
      
      
      ENS_PART_VOF.setattr_begin
      
      
      ENS_PART_VOF.setattr_end
      
      
      ENS_PART_VOF.setattr_status
      
      
      ENS_PART_VOF.setattrs
      
      
      ENS_PART_VOF.setmetatag
      
      
      ENS_PART_VOF.simba_get_values
      
      
      ENS_PART_VOF.simba_tracepaths
      
      
      ENS_PART_VOF.tracepaths
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      ENS_PART_VOF.ACTIVE
      ENS_PART_VOF.ADJCOORDSCALEFACTOR
      ENS_PART_VOF.ADJCOORDTRANSVEC
      ENS_PART_VOF.ADJCOORDVARSCALEFACTOR
      ENS_PART_VOF.ADJCOORDXVARIABLE
      ENS_PART_VOF.ADJCOORDYVARIABLE
      ENS_PART_VOF.ADJCOORDZVARIABLE
      ENS_PART_VOF.ALPHABY
      ENS_PART_VOF.ALPHABYPALETTE
      ENS_PART_VOF.BLANKINGALGORITHM
      ENS_PART_VOF.BLANKINGCLIPALG
      ENS_PART_VOF.BLANKINGTHRESHOLD
      ENS_PART_VOF.BLANKINGVARIABLE1
      ENS_PART_VOF.BLANKINGVARIABLE2
      ENS_PART_VOF.BOUNDARYFLAGXMAX
      ENS_PART_VOF.BOUNDARYFLAGXMIN
      ENS_PART_VOF.BOUNDARYFLAGYMAX
      ENS_PART_VOF.BOUNDARYFLAGYMIN
      ENS_PART_VOF.BOUNDARYFLAGZMAX
      ENS_PART_VOF.BOUNDARYFLAGZMIN
      ENS_PART_VOF.BOUNDINGREP
      ENS_PART_VOF.CASENUMBER
      ENS_PART_VOF.CELLCOMPNUM
      ENS_PART_VOF.CELLTYPE
      ENS_PART_VOF.CELLVOLUMEFRACTION
      ENS_PART_VOF.CHILDREN
      ENS_PART_VOF.CLIP
      ENS_PART_VOF.CLIPBLANKINGVARIABLE
      ENS_PART_VOF.CLIPLCTW
      ENS_PART_VOF.CLIPPERIODICFLAGX
      ENS_PART_VOF.CLIPPERIODICFLAGY
      ENS_PART_VOF.CLIPTYPE
      ENS_PART_VOF.COLORBYPALETTE
      ENS_PART_VOF.COLORBYRGB
      ENS_PART_VOF.COMPONENT
      ENS_PART_VOF.COMPONENTNUMINCELL
      ENS_PART_VOF.COOLINGCHANNELCOMP
      ENS_PART_VOF.CULLELEMENTS
      ENS_PART_VOF.DESCRIPTION
      ENS_PART_VOF.DISPLACEBY
      ENS_PART_VOF.DISPLACEFACTOR
      ENS_PART_VOF.DOUBLESIDED
      ENS_PART_VOF.DTA_BLOCK
      ENS_PART_VOF.EDIT_TARGET
      ENS_PART_VOF.ELTBLANKING
      ENS_PART_VOF.ELTDEFINEDBY
      ENS_PART_VOF.ELTFEATUREANGLE
      ENS_PART_VOF.ELTFILTER1ACTIVE
      ENS_PART_VOF.ELTFILTER1TESTOP
      ENS_PART_VOF.ELTFILTER1TESTVALUE
      ENS_PART_VOF.ELTFILTER1TESTVARCOMP
      ENS_PART_VOF.ELTFILTER1TESTVARIABLE
      ENS_PART_VOF.ELTFILTER1VARCOMP
      ENS_PART_VOF.ELTFILTER1VARIABLE
      ENS_PART_VOF.ELTFILTER2ACTIVE
      ENS_PART_VOF.ELTFILTER2LOGICALOP
      ENS_PART_VOF.ELTFILTER2TESTOP
      ENS_PART_VOF.ELTFILTER2TESTVALUE
      ENS_PART_VOF.ELTFILTER2TESTVARCOMP
      ENS_PART_VOF.ELTFILTER2TESTVARIABLE
      ENS_PART_VOF.ELTFILTER2VARCOMP
      ENS_PART_VOF.ELTFILTER2VARIABLE
      ENS_PART_VOF.ELTFILTER3ACTIVE
      ENS_PART_VOF.ELTFILTER3LOGICALOP
      ENS_PART_VOF.ELTFILTER3TESTOP
      ENS_PART_VOF.ELTFILTER3TESTVALUE
      ENS_PART_VOF.ELTFILTER3TESTVARCOMP
      ENS_PART_VOF.ELTFILTER3TESTVARIABLE
      ENS_PART_VOF.ELTFILTER3VARCOMP
      ENS_PART_VOF.ELTFILTER3VARIABLE
      ENS_PART_VOF.ELTFILTER4ACTIVE
      ENS_PART_VOF.ELTFILTER4LOGICALOP
      ENS_PART_VOF.ELTFILTER4TESTOP
      ENS_PART_VOF.ELTFILTER4TESTVALUE
      ENS_PART_VOF.ELTFILTER4TESTVARCOMP
      ENS_PART_VOF.ELTFILTER4TESTVARIABLE
      ENS_PART_VOF.ELTFILTER4VARCOMP
      ENS_PART_VOF.ELTFILTER4VARIABLE
      ENS_PART_VOF.ELTFILTER5ACTIVE
      ENS_PART_VOF.ELTFILTER5LOGICALOP
      ENS_PART_VOF.ELTFILTER5TESTOP
      ENS_PART_VOF.ELTFILTER5TESTVALUE
      ENS_PART_VOF.ELTFILTER5TESTVARCOMP
      ENS_PART_VOF.ELTFILTER5TESTVARIABLE
      ENS_PART_VOF.ELTFILTER5VARCOMP
      ENS_PART_VOF.ELTFILTER5VARIABLE
      ENS_PART_VOF.ELTFILTER6ACTIVE
      ENS_PART_VOF.ELTFILTER6LOGICALOP
      ENS_PART_VOF.ELTFILTER6TESTOP
      ENS_PART_VOF.ELTFILTER6TESTVALUE
      ENS_PART_VOF.ELTFILTER6TESTVARCOMP
      ENS_PART_VOF.ELTFILTER6TESTVARIABLE
      ENS_PART_VOF.ELTFILTER6VARCOMP
      ENS_PART_VOF.ELTFILTER6VARIABLE
      ENS_PART_VOF.ELTREPPOINTSNORMALS
      ENS_PART_VOF.ELTREPRESENTATION
      ENS_PART_VOF.ELTSHRINKFACTOR
      ENS_PART_VOF.ENS_DETAILS
      ENS_PART_VOF.ENS_KIND
      ENS_PART_VOF.ENS_MATERIAL
      ENS_PART_VOF.ENS_PARENT_PART
      ENS_PART_VOF.ENS_PLIST_KEY_SEL_0
      ENS_PART_VOF.ENS_PLIST_KEY_SEL_1
      ENS_PART_VOF.ENS_PLIST_KEY_SEL_2
      ENS_PART_VOF.ENS_PLIST_KEY_SEL_3
      ENS_PART_VOF.ENS_PLIST_KEY_SEL_4
      ENS_PART_VOF.ENS_PLIST_KEY_SEL_5
      ENS_PART_VOF.ENS_PLIST_KEY_SEL_6
      ENS_PART_VOF.ENS_PLIST_KEY_SEL_7
      ENS_PART_VOF.ENS_PLIST_KEY_SEL_8
      ENS_PART_VOF.ENS_PLIST_KEY_SEL_9
      ENS_PART_VOF.ENS_SYMMETRY_AXIS
      ENS_PART_VOF.ENS_SYMMETRY_COUNT
      ENS_PART_VOF.ENS_TURBO_STAGE
      ENS_PART_VOF.ENS_TURBO_VDIM
      ENS_PART_VOF.ENS_TURBO_VIEW
      ENS_PART_VOF.ENS_UNITS_LABEL
      ENS_PART_VOF.ENTITYLABELELT
      ENS_PART_VOF.ENTITYLABELNODE
      ENS_PART_VOF.EPSILON
      ENS_PART_VOF.FACEAREAFRACTION
      ENS_PART_VOF.FILLPATTERN
      ENS_PART_VOF.FLUENTTEXTUREAXIS
      ENS_PART_VOF.FLUENTTEXTUREROTANGLE
      ENS_PART_VOF.FLUENTTEXTURESCALE
      ENS_PART_VOF.GEOMETRICTYPE
      ENS_PART_VOF.HANDLES_ENABLED
      ENS_PART_VOF.HAS0DELEMENTS
      ENS_PART_VOF.HAS1DELEMENTS
      ENS_PART_VOF.HAS2DELEMENTS
      ENS_PART_VOF.HAS3DELEMENTS
      ENS_PART_VOF.HIDDENLINE
      ENS_PART_VOF.HIDDENSURFACE
      ENS_PART_VOF.IJKAXIS
      ENS_PART_VOF.IJKAXISSCALE
      ENS_PART_VOF.INTERACTIVERANGEMAX
      ENS_PART_VOF.INTERACTIVERANGEMIN
      ENS_PART_VOF.INTERACTIVESTEP
      ENS_PART_VOF.INTERACTIVEXMAX
      ENS_PART_VOF.INTERACTIVEXMIN
      ENS_PART_VOF.INTERACTIVEYMAX
      ENS_PART_VOF.INTERACTIVEYMIN
      ENS_PART_VOF.INTERACTIVEZMAX
      ENS_PART_VOF.INTERACTIVEZMIN
      ENS_PART_VOF.ISGROUP
      ENS_PART_VOF.LIGHTAMBIENT
      ENS_PART_VOF.LIGHTDIFFUSE
      ENS_PART_VOF.LIGHTEMISSIVE
      ENS_PART_VOF.LIGHTREFRACTION
      ENS_PART_VOF.LIGHTSPECULARINTENSITY
      ENS_PART_VOF.LIGHTSPECULARREFLECTION
      ENS_PART_VOF.LIGHTSPECULARSHINE
      ENS_PART_VOF.LIGHTSPECULARTINT
      ENS_PART_VOF.LINESTYLE
      ENS_PART_VOF.LINEWIDTH
      ENS_PART_VOF.LPARTPARENT
      ENS_PART_VOF.MATERIALBASETYPE
      ENS_PART_VOF.MATERIALDESCRIPTION
      ENS_PART_VOF.MESHTYPE
      ENS_PART_VOF.METADATA
      ENS_PART_VOF.MIRRORORIGINAL
      ENS_PART_VOF.NODEDETAIL
      ENS_PART_VOF.NODEORIENTATIONANGLE
      ENS_PART_VOF.NODEORIENTATIONAXIS
      ENS_PART_VOF.NODERANGESTEPI
      ENS_PART_VOF.NODERANGESTEPJ
      ENS_PART_VOF.NODERANGESTEPK
      ENS_PART_VOF.NODESCALE
      ENS_PART_VOF.NODESIZEBY
      ENS_PART_VOF.NODETYPE
      ENS_PART_VOF.NODEVARIABLE
      ENS_PART_VOF.OPAQUENESS
      ENS_PART_VOF.PARENT
      ENS_PART_VOF.PARTNUMBER
      ENS_PART_VOF.PARTNUMELE
      ENS_PART_VOF.PARTNUMELECLIENT
      ENS_PART_VOF.PARTTYPE
      ENS_PART_VOF.PARTTYPEENUM
      ENS_PART_VOF.PATHNAME
      ENS_PART_VOF.PERIODICSECTIONS
      ENS_PART_VOF.PREDEFINEDMATERIAL
      ENS_PART_VOF.PROJECT_MASK
      ENS_PART_VOF.REDUCEPOLYGONS
      ENS_PART_VOF.REDUCEPOLYGONSFACTOR
      ENS_PART_VOF.REFFRAME
      ENS_PART_VOF.RENDERINGREFLECTIONID
      ENS_PART_VOF.REVERSENORMAL
      ENS_PART_VOF.SELECTED
      ENS_PART_VOF.SHADING
      ENS_PART_VOF.SHOWSFT
      ENS_PART_VOF.SOURCES
      ENS_PART_VOF.SPECIFYCELLCOMPNUM
      ENS_PART_VOF.SPECIFYSYMMETRYORIGIN
      ENS_PART_VOF.SYMMETRY
      ENS_PART_VOF.SYMMETRYANGLE
      ENS_PART_VOF.SYMMETRYAXIS
      ENS_PART_VOF.SYMMETRYDELTA
      ENS_PART_VOF.SYMMETRYMIRRORX
      ENS_PART_VOF.SYMMETRYMIRRORXY
      ENS_PART_VOF.SYMMETRYMIRRORXYZ
      ENS_PART_VOF.SYMMETRYMIRRORXZ
      ENS_PART_VOF.SYMMETRYMIRRORY
      ENS_PART_VOF.SYMMETRYMIRRORYZ
      ENS_PART_VOF.SYMMETRYMIRRORZ
      ENS_PART_VOF.SYMMETRYORIGIN
      ENS_PART_VOF.SYMMETRYRINSTANCES
      ENS_PART_VOF.SYMMETRYTYPE
      ENS_PART_VOF.TEXTURECOORDTYPE
      ENS_PART_VOF.TEXTUREINTERPOLATION
      ENS_PART_VOF.TEXTUREMODE
      ENS_PART_VOF.TEXTUREOBJECT
      ENS_PART_VOF.TEXTUREORIGIN
      ENS_PART_VOF.TEXTUREORIGINNODEID
      ENS_PART_VOF.TEXTUREORIGINUSE
      ENS_PART_VOF.TEXTUREREPEATMODE
      ENS_PART_VOF.TEXTURESORIGINNODEID
      ENS_PART_VOF.TEXTURESVARIABLE
      ENS_PART_VOF.TEXTURESVECTOR
      ENS_PART_VOF.TEXTURETORIGINNODEID
      ENS_PART_VOF.TEXTURETVARIABLE
      ENS_PART_VOF.TEXTURETVECTOR
      ENS_PART_VOF.TYPE
      ENS_PART_VOF.UUID
      ENS_PART_VOF.VALUE
      ENS_PART_VOF.VARIABLE
      ENS_PART_VOF.VDBMESHADAPTIVITY
      ENS_PART_VOF.VDBMESHOFFSET
      ENS_PART_VOF.VDBNARROWBANDSIZE
      ENS_PART_VOF.VDBVOXELSIZERATIO
      ENS_PART_VOF.VIEWPORTVIS
      ENS_PART_VOF.VISIBILITYELT
      ENS_PART_VOF.VISIBILITYLINE
      ENS_PART_VOF.VISIBILITYNODE
      ENS_PART_VOF.VISIBLE
      ENS_PART_VOF.VOFCLIPVALUE
      ENS_PART_VOF.VOFCLIPZTEST
      ENS_PART_VOF.VOFISOVALUE
      ENS_PART_VOF.VOFISOZTEST
      ENS_PART_VOF.VOLUMEQUALITY
      ENS_PART_VOF.VOLUMERENDERINGTYPE
      ENS_PART_VOF.__OBJID__
      ENS_PART_VOF.objid
   
   